@@ -3,8 +3,6 @@
 // implied warranty of merchantability or fitness for a particular purpose.
 // See file LICENSE for details and terms of copying.
 
-#import <stdlib.h>
-#import <string.h> //for alpha
 #import <space/DblBuffer2d.h>
 
 // general plan:
@@ -17,13 +15,28 @@
 //
 // Summary: only *read* from lattice, only *write* to newLattice.
 
+
+//S: A double buffered space.
+//D: DblBuffer2d augments Discrete2d to provide a form of double buffered
+//D: space. Two lattices are maintained: lattice (the current state), and
+//D: newLattice (the future state). All reads take place from lattice, all
+//D: writes take place to newLattice. newLattice is copied to lattice when
+//D: updateLattice is called.  DblBuffer2d can be used to implement one
+//D: model of concurrent action, like in Ca2ds.  NOTE: be very careful if
+//D: you're using low-level macro access to the world, in particular be
+//D: sure that you preserve the write semantics on the newLattice.
+
 @implementation DblBuffer2d
 
 // allocate buffers.
--createEnd {
+//M: Rewrites the method from Discrete2d. Allocate two lattices,
+//M: makes the offsets.
+- createEnd
+{
   if (xsize == 0 || ysize == 0)
-    [InvalidCombination raiseEvent: "DblBuffer2d not initialized correctly.\n"];
-
+    [InvalidCombination
+      raiseEvent: "DblBuffer2d not initialized correctly.\n"];
+  
   // should call parent class of our parent's createEnd
   wBuf1 = [self allocLattice];
   wBuf2 = [self allocLattice];
@@ -34,38 +47,54 @@
   return self;
 }
 
--(id *) getNewLattice {
+//M: Return a pointer to the newLattice buffer.
+- (id *)getNewLattice
+{
   return newLattice;
 }
 
 // swap lattice pointers around (see comment at top of file.)
--updateLattice {
-  if (lattice == wBuf1 && newLattice == wBuf2) {
-    lattice = wBuf2;
-    newLattice = wBuf1;
-  } else if (lattice == wBuf2 && newLattice == wBuf1) {
-    lattice = wBuf1;
-    newLattice = wBuf2;
-  } else {
-    [WarningMessage raiseEvent: "Ca2d: Sanity check failed when swapping lattice pointers!\n"];
-    return nil;
+//M: Copy newLattice to lattice, in effect updating the lattice. 
+- updateLattice
+{
+  if (lattice == wBuf1 && newLattice == wBuf2)
+    {
+      lattice = wBuf2;
+      newLattice = wBuf1;
   }
+  else if (lattice == wBuf2 && newLattice == wBuf1)
+    {
+      lattice = wBuf1;
+      newLattice = wBuf2;
+    }
+  else
+    {
+      [WarningMessage
+        raiseEvent:
+          "Ca2d: Sanity check failed when swapping lattice pointers!\n"];
+      return nil;
+    }
 
   // after update, make newLattice == lattice. This handles cases where people
   // want to only modify parts of newLattice and then call updateLattice.
-  memcpy(newLattice, lattice, xsize*ysize*sizeof(*lattice));
+  memcpy (newLattice, lattice, xsize * ysize * sizeof (*lattice));
+
   return self;
 }
 
 // override puts to use new lattice, not old.
--putObject: anObject atX: (int) x Y: (int) y {
-  *discrete2dSiteAt(newLattice, offsets, x, y) = anObject;
+//M: Overridden so writes happen to newLattice.
+- putObject: anObject atX: (int)x Y: (int)y
+{
+  *discrete2dSiteAt (newLattice, offsets, x, y) = anObject;
   return self;
 }
 
 // override puts to use new lattice, not old.
--putValue: (long) v atX: (int) x Y: (int) y {
-  *discrete2dSiteAt(newLattice, offsets, x, y) = (id) v;
+//M: Overridden so writes happen to newLattice.
+- putValue: (long)v atX: (int)x Y: (int)y
+{
+  *discrete2dSiteAt (newLattice, offsets, x, y) = (id)v;
   return self;
 }
 
