@@ -13,33 +13,42 @@
 //   k is the diffusion constant
 //   evap is the evaporation rate.
 
+//S: 2d difussion with evaporation.
+//D: Discrete 2nd order approximation to 2d diffusion with evaporation. 
+//D: Math is done in integers on the range [0,0x7fff]. 
 @implementation Diffuse2d
 
 const unsigned maxStates = 0x7fff;
 
+//M: Set diffusion constant and evaporation rate to 1.0, numStates to 0x7fff.
 + createBegin: (id) aZone
 {
-  id r;
-  r = [super createBegin: aZone];
+  id r = [super createBegin: aZone];
 
   [r setDiffusionConstant: 1.0];
   [r setEvaporationRate: 1.0];
   [r setNumStates: maxStates];
+
   return r;
 }
 
+//M: Set the diffusion constant. Values over 1.0 might not be valid.
 - setDiffusionConstant: (double)d
 {
   diffusionConstant = d;
+
   return self;
 }
 
+//M: Set the evaporation rate. Values over 1.0 don't make much sense
 - setEvaporationRate: (double)e
 {
   evaporationRate = e;
+
   return self;
 }
 
+//M: Initialize world to 0.
 - initializeLattice
 {
   unsigned x, y;
@@ -60,6 +69,9 @@ const unsigned maxStates = 0x7fff;
   return self;
 }
 
+//M: Run discrete approximation to diffusion. Roughly, it's 
+//M: newHeat = evapRate * (self + diffuseConstant*(nbdavg - self)) 
+//M: where nbdavg is the weighted average of the 8 neighbours. 
 - stepRule
 {
   unsigned x, y;
@@ -115,10 +127,10 @@ const unsigned maxStates = 0x7fff;
         else if (d + 0.5 >= maxStates)
           newState = maxStates;
         else
-          newState = (long) floor(d+0.5);	  // round to nearest.
+          newState = (long)floor (d+0.5);	  // round to nearest.
         // can't use rint(), sigh.
         
-        *(discrete2dSiteAt(newLattice, offsets, x, y)) = (id) newState;
+        *(discrete2dSiteA t(newLattice, offsets, x, y)) = (id)newState;
       }
   [self updateLattice];
   return self;
