@@ -4,12 +4,20 @@
 // See file LICENSE for details and terms of copying.
 
 // Loop through a Discrete2d, sending the displayMessage message to
-// all objects found in there. One argument is passed on the message,
+// all objects found in there.  One argument is passed on the message,
 // the display widget.
 
 #import <space/Object2dDisplay.h>
 #import <gui.h> // GUI_BEEP
 #import <simtoolsgui.h> // CREATE_PROBE_DISPLAY
+
+//S: Object2dDisplay displays 2d arrays of objects.
+//D: Object2dDisplay helps display 2d arrays of objects. 
+//D: Create a Object2dDisplay, give it a Raster widget to draw on,
+//D: a Discrete2d, a message to call on each object, and (optionally)
+//D: a collection of objects and it will dispatch the message to all
+//D: objects with the Raster widget as an argument. In addition,
+//D: Object2dDisplay can help you make probees. 
 
 @implementation Object2dDisplay
 
@@ -21,33 +29,46 @@
   return self;
 }
 
+//M: Set the display widget to use for drawing.
 - setDisplayWidget: (id <Raster>)r
 {
   displayWidget = r;
   return self;
 }
 
+//M: Set the 2d array to draw.
 - setDiscrete2dToDisplay: (Discrete2d *)c
 {
   discrete2d = c;
   return self;
 }
 
+//M: Set the message to be sent to each object in the grid to make it
+//M: draw itself. 
 - setDisplayMessage: (SEL)s
 {
   displayMessage = s;
   return self;
 }
 
-// an optional collection of objects to display. If you give us one, then
+// An optional collection of objects to display. If you give us one, then
 // on display we'll just forEach through the objects. Otherwise we have to
 // scan the whole array.
+//M: Set a collection of objects to be displayed. 
+//M: If this is not given, then Object2dDisplay loops through the 2d
+//M: grid sending draw messages to all objects it finds there. 
+//M: Giving an explicit collection of objects to draw is more efficient
+//M: if your grid is sparsely populated. 
 - setObjectCollection: objects
 {
   objectCollection = objects;
   return self;
 }
 
+//M: Draw all objects in the array (or optionally, the collection)
+//M: on the raster widget. All that happens here is the display message
+//M: is sent to each object - it is the object's responsibility to
+//M: render itself. 
 - display
 {
   int x, y;
@@ -69,9 +90,8 @@
       for (y = 0; y < ysize; y++)
         for (x = 0; x < xsize; x++)
           {
-            id potentialObject;
+            id potentialObject = *discrete2dSiteAt (lattice, offsets, x, y);
 
-            potentialObject = *discrete2dSiteAt(lattice, offsets, x, y);
             if (potentialObject)
               [potentialObject perform: displayMessage with: displayWidget];
           }
